--- a/milestone1App.ui
+++ b/milestone1App.ui
@@ -129,7 +129,7 @@ background-color: rgb(181, 206, 227);</string>
       <property name="title">
        <string>Businesses</string>
       </property>
-      <widget class="QTableWidget" name="tableWidget">
+      <widget class="QTableWidget" name="BusinessTable">
        <property name="geometry">
         <rect>
          <x>20</x>
